--- a/NoSqlChallenge/Starter_Code/NoSQL_analysis_starter.ipynb
+++ b/NoSqlChallenge/Starter_Code/NoSQL_analysis_starter.ipynb
@@ -25,7 +25,8 @@
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -57,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
@@ -99,11 +101,13 @@
    "outputs": [],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "hygeine_query = {'scores.Hygiene' : 20}\n",
+    "\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "hygeine_count = establishments.count_documents(query)\n",
+    "# Display the first document in the results using pprint\n",
+    "pprint(establishments.find_one(query))"
    ]
   },
   {
@@ -114,10 +118,12 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "hygeine_df = pd.DataFrame(establishments.find(query))\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "rows_amount = len(hygeine_df)\n",
+    "print(rows_amount)\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "hygeine_df.head(10)"
    ]
   },
   {
@@ -136,11 +142,12 @@
    "outputs": [],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "query =\n",
+    "london_query = {'LocalAuthorityName' : {'$regex' : 'London'}, 'RatingValue' : {'$gte' : '4'}}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "london_count = establishments.count_documents(london_query)\n",
+    "# Display the first document in the results using pprint\n",
+    "pprint(establishments.find_one(london_query))"
    ]
   },
   {
@@ -151,10 +158,12 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "london_df = pd.DataFrame(establishments.find(london_query))\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "london_rows = len(london_df)\n",
+    "print(london_rows)\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "london_df.head(10)"
    ]
   },
   {
@@ -176,15 +185,23 @@
     "# Search within 0.01 degree on either side of the latitude and longitude.\n",
     "# Rating value must equal 5\n",
     "# Sort by hygiene score\n",
+    "new_restaurant = establishments.find_one({'BusinessName': 'Penang Flavours'},  {'geocode.longitude', 'geocode.latitude'})\n",
     "\n",
     "degree_search = 0.01\n",
-    "latitude = \n",
-    "longitude = \n",
     "\n",
-    "query = \n",
-    "sort =  \n",
+    "latitude = new_restaurant['geocode']['latitude']\n",
     "\n",
-    "# Print the results\n"
+    "longitude = new_restaurant['geocode']['longitude']\n",
+    "\n",
+    "top5_query = {'RatingValue' : '5', 'geocode.latitude' : {'$gte' : latitude - degree_search, '$lte' : latitude + degree_search}, 'geocode.longitude': {'$gte' : longitude - degree_search, '$lte' : longitude + degree_search}}\n",
+    "\n",
+    "sort =   [('scores.Hygiene', 1)]\n",
+    "\n",
+    "# Print the results\n",
+    "top_5 = list(establishments.find(top5_query).sort(sort).limit(5))\n",
+    "\n",
+    "for establishment in top_5:\n",
+    "    pprint(establishment)"
    ]
   },
   {
@@ -194,7 +211,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert result to Pandas DataFrame\n"
+    "# Convert result to Pandas DataFrame\n",
+    "top_5_df = pd.DataFrame(top_5)\n",
+    "top_5_df.head()"
    ]
   },
   {
@@ -214,12 +233,21 @@
    "source": [
     "# Create a pipeline that: \n",
     "# 1. Matches establishments with a hygiene score of 0\n",
+    "hygeine_match = {'$match': {'scores.Hygiene': 0}}\n",
     "# 2. Groups the matches by Local Authority\n",
+    "local_group = {'$group': {'_id': '$LocalAuthorityName', 'count': { '$sum': 1 }}}\n",
     "# 3. Sorts the matches from highest to lowest\n",
+    "hi_low_sort = {'$sort': {'count': -1}}\n",
+    "\n",
+    "pipeline = [hygeine_match,local_group,hi_low_sort]\n",
+    "\n",
+    "pipeline_results = list(establishments.aggregate(pipeline))\n",
     "\n",
     "# Print the number of documents in the result\n",
+    "print(len(pipeline_results))\n",
     "\n",
-    "# Print the first 10 results\n"
+    "# Print the first 10 results\n",
+    "pprint(pipeline_results[0:10])"
    ]
   },
   {
@@ -230,10 +258,11 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
-    "\n",
+    "pipeline_df = pd.DataFrame(pipeline_results)\n",
     "# Display the number of rows in the DataFrame\n",
-    "\n",
-    "# Display the first 10 rows of the DataFrame\n"
+    "print(len(pipeline_df))\n",
+    "# Display the first 10 rows of the DataFrame\n",
+    "pipeline_df.head(10)"
    ]
   }
  ],
