--- a/NoSqlChallenge/Starter_Code/NoSQL_setup_starter.ipynb
+++ b/NoSqlChallenge/Starter_Code/NoSQL_setup_starter.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "e.g.: Import the dataset with `mongoimport --type json -d uk_food -c establishments --drop --jsonArray establishments.json`"
    ]
   },
   {
@@ -58,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(mongo.list_database_names())"
    ]
   },
   {
@@ -89,7 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
@@ -99,7 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# review a document in the establishments collection\n"
+    "# review a document in the establishments collection\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
@@ -136,7 +139,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "new_restaurant = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
@@ -146,7 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "establishments.insert_one(new_restaurant)"
    ]
   },
   {
@@ -156,7 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "pprint(establishments.find_one('BusinessName' : 'Penang Flavours'))"
    ]
   },
   {
@@ -174,7 +207,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "business_type = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "\n",
+    "fields = ['BusinessTypeID', 'BusinessType']\n",
+    "\n",
+    "type_id = establishments.find_one(business_type, fields)\n",
+    "\n",
+    "pprint(type_id)"
    ]
   },
   {
@@ -192,7 +232,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "establishments.update_one(new_restaurant, {'$set': {'BusinessTypeID': 1}})"
    ]
   },
   {
@@ -202,7 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "establishments.find_one('BusinessName' : 'Penang Flavours')"
    ]
   },
   {
@@ -220,7 +262,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "establishments.count_documents({'LocalAuthorityName': 'Dover'})"
    ]
   },
   {
@@ -230,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "establishments.delete_many({'LocalAuthorityName' : 'Dover'})"
    ]
   },
   {
@@ -240,7 +284,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "establishments.count_documents({'LocalAuthorityName': 'Dover'})"
    ]
   },
   {
@@ -250,7 +295,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "establishments.find_one({})"
    ]
   },
   {
@@ -278,7 +324,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "establishments.update_many({}, [ {'$set': {\"geocode.longitude\" : {'$toDecimal' : '$geocode.longitude'}}}])\n",
+    "\n",
+    "establishments.update_many({}, [ {'$set': {\"geocode.latitude\" : {'$toDecimal' : '$geocode.latitude'}}}])"
    ]
   },
   {
@@ -299,6 +348,7 @@
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
+    "\n",
     "establishments.update_many({\"RatingValue\": {\"$in\": non_ratings}}, [ {'$set':{ \"RatingValue\" : None}} ])"
    ]
   },
@@ -309,7 +359,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, [ {'$set': {\"RatingValue\" : {'$toInteger' : '$RatingValue'}}}])\n"
    ]
   },
   {
@@ -319,7 +370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "pprint(db.establishments.find_one())"
    ]
   }
  ],
@@ -339,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
